fixed some imports

--- a/TUTO_task_Generation_Autoregressive.ipynb
+++ b/TUTO_task_Generation_Autoregressive.ipynb
@@ -77,17 +77,17 @@
    "outputs": [],
    "source": [
     "# Import necessary modules for training and evaluation.\n",
-    "import torch\n",
-    "from tqdm import tqdm\n",
-    "from x_transformers import TransformerWrapper, Decoder\n",
-    "from encodec import EncodecModel\n",
-    "from torch import nn\n",
-    "import soundfile as sf\n",
     "import os\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
+    "import torch\n",
     "import numpy as np\n",
+    "import soundfile as sf\n",
+    "import IPython.display as ipd\n",
+    "from torch import nn\n",
+    "from tqdm import tqdm\n",
+    "from encodec import EncodecModel\n",
     "from encodec.utils import convert_audio\n",
-    "import IPython.display as ipd"
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "from x_transformers import TransformerWrapper, Decoder"
    ]
   },
   {
