--- a/TUTO_task_Generation_Diffusion.ipynb
+++ b/TUTO_task_Generation_Diffusion.ipynb
@@ -1,26 +1,31 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "9446d307a137c489",
+   "cell_type": "markdown",
+   "source": [
+    "# Jupyter Notebook for Diffusion-Based Generation"
+   ],
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 14104,
-     "status": "ok",
-     "timestamp": 1729517877232,
-     "user": {
-      "displayName": "Stefan Lattner",
-      "userId": "10208485314648817271"
-     },
-     "user_tz": -120
-    },
-    "id": "9446d307a137c489",
-    "outputId": "74c8e9ce-71ff-48a1-ec71-1ef1f65ccffc"
+    "collapsed": false
    },
+   "id": "86f49e411863b9d2"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Install Necessary Libraries\n",
+    "\n",
+    "In this section, we install the required libraries for our project:\n",
+    "- `music2latent` for using the **Music2Latent** neural audio codec.\n",
+    "- `soundfile` for loading and saving audio files."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "4e293a50efd8a05e"
+  },
+  {
+   "cell_type": "code",
    "outputs": [
     {
      "name": "stdout",
@@ -57,22 +62,40 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
     "# Install necessary libraries (run this cell first)\n",
     "!pip install music2latent soundfile"
-   ]
+   ],
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 14104,
+     "status": "ok",
+     "timestamp": 1729517877232,
+     "user": {
+      "displayName": "Stefan Lattner",
+      "userId": "10208485314648817271"
+     },
+     "user_tz": -120
+    },
+    "id": "9446d307a137c489",
+    "outputId": "74c8e9ce-71ff-48a1-ec71-1ef1f65ccffc"
+   },
+   "id": "9446d307a137c489",
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
-   "id": "A84KoUUVTJhp",
-   "metadata": {
-    "id": "A84KoUUVTJhp"
-   },
    "source": [
     "## Import Libraries\n",
     "\n",
     "In this section, we import all the necessary libraries required for our project. This includes PyTorch for deep learning, `soundfile` for audio processing, `tqdm` for progress bars, and the `music2latent` package for encoding and decoding audio into latent representations."
-   ]
+   ],
+   "metadata": {
+    "id": "A84KoUUVTJhp"
+   },
+   "id": "A84KoUUVTJhp"
   },
   {
    "cell_type": "code",
@@ -97,16 +120,15 @@
    },
    "outputs": [],
    "source": [
-    "import torch\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
     "import os\n",
-    "import soundfile as sf\n",
-    "from tqdm import tqdm\n",
-    "from music2latent import EncoderDecoder\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
+    "import torch\n",
     "import scipy.signal\n",
-    "import IPython.display as ipd"
+    "import torch.nn as nn\n",
+    "import soundfile as sf\n",
+    "import IPython.display as ipd\n",
+    "import torch.nn.functional as F\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "from music2latent import EncoderDecoder"
    ]
   },
   {
