--- a/TUTO_task_Generation_Autoregressive.ipynb
+++ b/TUTO_task_Generation_Autoregressive.ipynb
@@ -469,7 +469,7 @@
    "source": [
     "# Create Dataloaders for training and validation.\n",
     "dataloader = DataLoader(dataset, batch_size=125, shuffle=True)\n",
-    "dataloader_val = DataLoader(dataset_val, batch_size=125, shuffle=True)"
+    "dataloader_val = DataLoader(dataset_val, batch_size=125, shuffle=False)"
    ]
   },
   {
