--- a/TUTO_task_Generation_Diffusion.ipynb
+++ b/TUTO_task_Generation_Diffusion.ipynb
@@ -127,6 +127,7 @@
     "import soundfile as sf\n",
     "import IPython.display as ipd\n",
     "import torch.nn.functional as F\n",
+    "from tqdm import tqdm\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "from music2latent import EncoderDecoder"
    ]
@@ -872,8 +873,8 @@
     "audio_folder_val = \"./NSYNTH_GUITAR_MP3/nsynth-guitar-valid\"\n",
     "\n",
     "# When initializing the dataset, the data gets compressed using the M2L encoder\n",
-    "dataset = MusicLatentDataset(root_dir=audio_folder_train, encoder=encdec)\n",
-    "dataset_val = MusicLatentDataset(root_dir=audio_folder_val, encoder=encdec)\n"
+    "dataset = MusicLatentDataset(root_dir=audio_folder_train, encoder=encdec, max_samples=-1)\n",
+    "dataset_val = MusicLatentDataset(root_dir=audio_folder_val, encoder=encdec, max_samples=-1)\n"
    ]
   },
   {
